@@ -17,25 +17,25 @@ my $prereqs  = {
   'requires' => {
     'CPAN::Meta' => '2.150005',
     'CPAN::Uploader' => '0.103004',
-    'Class::Null' => '2.101420',
-    'Class::Usul' => 'v0.63.0',
+    'Class::Null' => '2.110730',
+    'Class::Usul' => 'v0.68.0',
     'Config::Tiny' => '2.22',
     'Date::Format' => '2.24',
-    'Dist::Zilla' => '4.300033',
-    'Dist::Zilla::Plugin::AbstractFromPOD' => 'v0.2.0',
-    'Dist::Zilla::Plugin::LicenseFromModule' => '0.03',
-    'Dist::Zilla::Plugin::ManifestInRoot' => 'v0.1.0',
+    'Dist::Zilla' => '5.037',
+    'Dist::Zilla::Plugin::AbstractFromPOD' => 'v0.3.0',
+    'Dist::Zilla::Plugin::LicenseFromModule' => '0.05',
+    'Dist::Zilla::Plugin::ManifestInRoot' => 'v0.13.0',
     'Dist::Zilla::Plugin::Meta::Dynamic::Config' => '0.04',
-    'Dist::Zilla::Plugin::ModuleBuild::Custom' => '4.16',
-    'Dist::Zilla::Plugin::ReadmeAnyFromPod' => '0.141760',
+    'Dist::Zilla::Plugin::ModuleBuild::Custom' => '4.26',
+    'Dist::Zilla::Plugin::ReadmeAnyFromPod' => '0.150250',
     'Dist::Zilla::Plugin::Signature' => '1.100930',
-    'Dist::Zilla::Plugin::Test::ReportMetadata' => 'v0.2.0',
+    'Dist::Zilla::Plugin::Test::ReportMetadata' => 'v0.4.0',
     'Dist::Zilla::Plugin::VersionFromModule' => '0.08',
-    'File::DataClass' => 'v0.63.0',
+    'File::DataClass' => 'v0.66.0',
     'File::ShareDir' => '1.102',
     'HTTP::Message' => '6.06',
-    'LWP' => '6.08',
-    'LWP::Protocol::https' => '6.03',
+    'LWP' => '6.13',
+    'LWP::Protocol::https' => '6.06',
     'Module::Metadata' => '1.000011',
     'Moo' => '2.000001',
     'Perl::Version' => '1.013',
@@ -45,7 +45,7 @@ my $prereqs  = {
     'Test::Requires' => '0.08',
     'Try::Tiny' => '0.22',
     'Type::Tiny' => '1.000004',
-    'Unexpected' => 'v0.38.0',
+    'Unexpected' => 'v0.43.0',
     'local::lib' => '2.000014',
     'namespace::autoclean' => '0.26',
     'perl' => '5.010001'
